# developers_of_kerala_backend

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  authentication.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  sample.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  TO_DO.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhance.md  feature-request.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pre-commit-.yml  pre-commit-checks.yml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: company.py  contact.py  developer.py  job.py  login.py  user.py  waitlist.py
app/core/: config.py  security.py
app/db/: engine.py
app/schemas/: company.py  developer.py
