[tool.poetry]
name = "developers-of-kerala-backend"
version = "0.1.0"
description = ""
authors = ["Sangeeth Joseph <https://github.com/Sangeeth123sj>","SharonAliyas5573 <sharonaliyas25@gmail.com>"]
license = "MIT"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "23.12.1"
pytest = "^7.4.4"
annotated-types = "0.6.0"
anyio = "4.2.0"
cachetools = "5.3.2"
cfgv = "3.4.0"
click = "8.1.7"
distlib = "0.3.8"
dnspython = "2.4.2"
ecdsa = "0.18.0"
exceptiongroup = "1.2.0"
fastapi = "0.108.0"
filelock = "3.13.1"
google-auth = "2.25.2"
h11 = "0.14.0"
httptools = "0.6.1"
identify = "2.5.33"
idna = "3.6"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
packaging = "23.2"
passlib = "1.7.4"
pathspec = "0.12.1"
platformdirs = "4.1.0"
pre-commit = "3.6.0"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pymongo = "4.6.1"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.32.0.post1"
tomli = "2.0.1"
typing-extensions = "4.9.0"
uvicorn = "0.25.0"
uvloop = "0.19.0"
virtualenv = "20.25.0"
watchfiles = "0.21.0"
websockets = "12.0"
email-validator = "^2.1.0.post1"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
